Added PUT /subscribers/{uid}
